<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/label_home"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:fontFamily="monospace"/>
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sp_countries"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:entries="@array/countries"
        android:layout_margin="20dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_home"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_home_selected_country_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sp_countries"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/label_selected_country"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-black"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_home_selected_country_flag"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_selected_country_title"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        tools:src="@drawable/canada"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_home_selected_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/iv_home_selected_country_flag"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="20dp"
        tools:text="Canada"
        android:textColor="@color/colorPrimary"
        android:fontFamily="sans-serif-light"
        app:layout_constraintTop_toTopOf="@+id/iv_home_selected_country_flag"
        app:layout_constraintStart_toEndOf="@+id/iv_home_selected_country_flag"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_home_pois_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_home_selected_country_flag"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="20dp"
        android:fontFamily="sans-serif-black"
        android:textColor="@android:color/black"
        android:text="@string/label_home_pois"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_pois"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_pois_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>